# libalpm-rs

./: .gitignore  Cargo.toml
examples/: sizes.rs
src/: config.rs  db.rs  lib.rs  util.rs
src/config/: parse.rs
src/db/: parse.rs
tests/: test_vercmp.rs
