[package]
name = "libalpm-rs"
version = "0.1.0"
edition = "2024"
authors = ["djugei"]
description = "partial cleanroom re-implementation of libalpm functionality"

[dependencies]
nom = "*"
string-interner = "*"
base64 = "*"

monoio = "*"
local-sync = "*"
rlimit = "*"

flate2 = "*"
tar = "*"

[dev-dependencies]

[profile.dev]
opt-level = 1
